--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
+Update this line of code
   </tr>
 </table>
 
